--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="col-12">
-            <p class="text-center text-lg-start">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam rerum corporis quo sed, voluptates, vitae fuga consectetur quasi id tempora quisquam commodi laboriosam natus enim nesciunt fugiat totam obcaecati ipsa.</p>
+            <p class="text-center text-lg-start">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam rerum corporis quo sed, voluptates, vitae fuga consectetur quasi id tempora quisquam commodi laboriosam natus enim nesciunt fugiat totam obcaecati.</p>
 
             <div class="col-12">
                 <a href="" class="btn btn-primary"> Comprar </a>
